test/error/MethodNoReturn.fu
public static class Test
{
	public static bool Run() //ERROR: Method can complete without a return value
	{
	}
}
